force-app/main/default/objects/SVMXC__ServiceMax_List__c/SVMXC__ServiceMax_List__c.object-meta.xml
<CustomObject>
    <description>This is a generic object used to manage data entry of multiple records (lines) on ServiceMax  VisualForce pages.</description>
    <label>ServiceMax List</label>
    <nameField>
        <displayFormat>REC-{0000000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax List</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>