force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Activate_Contract_Upon_Renewal__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Activate_Contract_Upon_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Contract can be activated upon Renewal</description>
    <inlineHelpText>Flag indicates if Contract can be activated upon Renewal</inlineHelpText>
    <label>Activate Contract Upon Renewal</label>
    <type>Checkbox</type>
</CustomField>