force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Activity_Type__c</fullName>
    <description>Indicates the type of activity performed.</description>
    <inlineHelpText>Indicates the type of activity performed.</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Usage Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>