force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Additional_Information__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Additional Information</inlineHelpText>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>