force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Chk_Top_Level_Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Chk_Top_Level_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Top-Level Installed Product is to be considered</description>
    <inlineHelpText>Flag indicates if Top-Level Installed Product is to be considered</inlineHelpText>
    <label>Top-Level Product</label>
    <type>Checkbox</type>
</CustomField>