force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Close_Request__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Close_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the request can be closed.</description>
    <inlineHelpText>Flag to indicate if the request can be closed.</inlineHelpText>
    <label>Close Request</label>
    <type>Checkbox</type>
</CustomField>