force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Copy_Covered_Locations__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Copy_Covered_Locations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Covered Locations are to be copied.</description>
    <inlineHelpText>Flag indicates if Covered Locations are to be copied.</inlineHelpText>
    <label>Copy Covered Locations</label>
    <type>Checkbox</type>
</CustomField>