force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Copy_Entitled_Contacts__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Copy_Entitled_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Entitled Contacts are to be copied</description>
    <inlineHelpText>Flag indicates if Entitled Contacts are to be copied</inlineHelpText>
    <label>Copy Entitled Contacts</label>
    <type>Checkbox</type>
</CustomField>