force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Discount__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Discount__c</fullName>
    <description>Percentage discount to be applied.</description>
    <inlineHelpText>Percentage discount to be applied.</inlineHelpText>
    <label>Discount %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>