force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Disposition__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Disposition__c</fullName>
    <description>Type of action to be taken by receiving department when the product arrives.</description>
    <inlineHelpText>Type of action to be taken by receiving department when the product arrives.</inlineHelpText>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scrap</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Salvage</fullName>
            </value>
            <value>
                <fullName>Restock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>