force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Line_Price__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Line_Price__c</fullName>
    <description>Price for Line Item.</description>
    <inlineHelpText>Price for Line Item.</inlineHelpText>
    <label>Line Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>