force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Object_API_Name__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Object API Name</inlineHelpText>
    <label>Object API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>