force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Product__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Product</description>
    <inlineHelpText>Lookup to Product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>ServiceMax List</relationshipLabel>
    <relationshipName>ServiceMax_List</relationshipName>
    <type>Lookup</type>
</CustomField>