force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Salesforce_Session_ID__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Salesforce_Session_ID__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Salesforce Session ID</inlineHelpText>
    <label>Salesforce Session ID</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>