force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Transaction_Type__c</fullName>
    <description>Internal use only</description>
    <inlineHelpText>Transaction Type</inlineHelpText>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Order Estimates</fullName>
            </value>
            <value>
                <fullName>Work Order Requests</fullName>
            </value>
            <value>
                <fullName>Work Order Usage</fullName>
            </value>
            <value>
                <fullName>Work Order Products Serviced</fullName>
            </value>
            <value>
                <fullName>Quote Line</fullName>
            </value>
            <value>
                <fullName>RMA Line</fullName>
            </value>
            <value>
                <fullName>Shipment Line</fullName>
            </value>
            <value>
                <fullName>Sales Order Line</fullName>
            </value>
            <value>
                <fullName>Parts Request Line</fullName>
            </value>
            <value>
                <fullName>Inventory Configuration</fullName>
            </value>
            <value>
                <fullName>Stock Transfer Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>