force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__User__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User</description>
    <inlineHelpText>Lookup to User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceMax_List</relationshipName>
    <type>Lookup</type>
</CustomField>