force-app/main/default/objects/SVMXC__ServiceMax_List__c/fields/SVMXC__Work_Description__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Work_Description__c</fullName>
    <description>An assessment of work to be performed or additional details about the line type.</description>
    <inlineHelpText>An assessment of work to be performed or additional details about the line type.</inlineHelpText>
    <label>Work Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>